--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,9 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "func start"
   },
   "keywords": [],
   "author": "",
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@azure/storage-blob": "^12.25.0",
-    "busboy": "^1.6.0"
+    "busboy": "^1.6.0",
+    "dotenv": "^16.4.5"
   }
 }
